Fixed header vertical spacing

--- a/static/results-style.css
+++ b/static/results-style.css
@@ -18,7 +18,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 1.5%;
+  margin-top: 2.5%;
   margin-bottom: 0px;
   width: 100%;
 }
@@ -41,6 +41,12 @@ body {
   align-items: center;
   justify-content: left;
   gap: 10px;
+}
+
+.website-title h2 {
+  margin: 0;
+  display: flex;
+  align-items: center;
 }
 
 .highlight {
